28th Jan, 2024 Solution Added

--- a/27-01-2024/index.html
+++ b/27-01-2024/index.html
@@ -41,7 +41,7 @@
 			height: 10px;
 			width: 300px;
 			background: #6c5a49;
-			position: fixed;
+			position: absolute;
 			gap: 25px;
 			animation: anime1 3s alternate infinite;
 			overflow: hidden;
