25th Feb, 2024 Solution Added

--- a/25-02-2024/index.html
+++ b/25-02-2024/index.html
@@ -39,7 +39,6 @@
 		}
 
 		.parent {
-			background: #0000;
 			justify-content: space-between;
 			animation: anime1 2s alternate infinite;
 			width: 40%;
@@ -58,6 +57,7 @@
 			width: 190px;
 		}
 
+		.parent,
 		.parent4,
 		.parent3,
 		.child2 {
@@ -73,14 +73,12 @@
 			width: 190px;
 			border: solid #ec0b43;
 			border-width: 30px 0;
-			top: 275px;
 		}
 
 		.diamond {
 			height: 50px;
 			width: 50px;
 			rotate: 45deg;
-			top: 195px;
 		}
 
 		.parent3 .diamond {
