18th March, 2024 Solution Added

--- a/17-03-2024/index.html
+++ b/17-03-2024/index.html
@@ -15,7 +15,7 @@
 			min-height: 97vh;
 			display: grid;
 			place-items: center;
-			background: radial-gradient(#478978, #84dcc6);
+			background: radial-gradient(#f1ecce, #331832);
 		}
 
 		.wrapper {
