--- a/18-03-2024/index.html
+++ b/18-03-2024/index.html
@@ -21,8 +21,7 @@
 		}
 
 		.wrapper,
-		.wrapper *,
-		.parent2 {
+		.wrapper * {
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -41,6 +40,8 @@
 		.child {
 			position: absolute;
 			background: #fff4e4;
+			height: 75px;
+			width: 75px;
 			border-radius: 20px;
 		}
 
@@ -51,25 +52,17 @@
 
 		.parent2 {
 			animation: anime2 2s alternate infinite;
-			height: 75px;
-			width: 75px;
 		}
 
 		.child1 {
-			height: 75px;
-			width: 75px;
 			animation: anime3 2s alternate infinite;
 		}
 
 		.child2 {
-			height: 75px;
-			width: 75px;
 			animation: anime4 2s alternate infinite;
 		}
 
 		.child3 {
-			height: 75px;
-			width: 75px;
 			animation: anime5 2s alternate infinite;
 		}
 
