10th April, 2024 Solution Added

--- a/10-04-2024/index.html
+++ b/10-04-2024/index.html
@@ -6,8 +6,13 @@
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<title>Play CSS - 10th April, 2024</title>
 	<style>
+		* {
+			margin: 0;
+			padding: 0;
+		}
+
 		body {
-			min-height: 97vh;
+			min-height: 100vh;
 			display: grid;
 			place-items: center;
 			background: radial-gradient(#294159, #fff, #FF8900);
