18th April, 2024 Solution Added

--- a/18-04-2024/index.html
+++ b/18-04-2024/index.html
@@ -15,7 +15,7 @@
 			min-height: 100vh;
 			display: grid;
 			place-items: center;
-			background: radial-gradient(#fff, #ede7d9, #4b4237);
+			background: radial-gradient(#0c1821, #ccc9dc);
 		}
 
 		.wrapper {
@@ -51,7 +51,7 @@
 		}
 
 		@keyframes anime {
-			to{				
+			to {
 				transform: scaleX(-1);
 				rotate: 360deg;
 			}
