12th May, 2024 Solution Added

--- a/12-05-2024/index.html
+++ b/12-05-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#1a1b41, #f1ffe7);
+            background: radial-gradient(#f8e491, #f1ffe7);
             display: grid;
             place-items: center;
         }
