--- a/27-05-2024/index.html
+++ b/27-05-2024/index.html
@@ -16,7 +16,7 @@
             min-height: 100vh;
             display: grid;
             place-items: center;
-            background: radial-gradient(#E5EFC0, #423C5A);
+            background: radial-gradient(#b98389, #fff, #423C5A);
         }
 
         .wrapper {
@@ -137,13 +137,17 @@
         }
 
         @keyframes anime2 {
-            0%, 50%{
+
+            0%,
+            50% {
                 margin-left: 60px;
             }
         }
 
         @keyframes anime3 {
-            0%, 50%{
+
+            0%,
+            50% {
                 margin-left: 60px;
             }
         }
