28th May, 2024 Solution Added

--- a/28-05-2024/index.html
+++ b/28-05-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#E5EFC0, #423C5A);
+            background: radial-gradient(#3b252c, #f1e1e1, #aea4bf);
         }
 
         body,
