29th May, 2024 Solution Added

--- a/29-05-2024/index.html
+++ b/29-05-2024/index.html
@@ -17,7 +17,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: radial-gradient(#3b252c, #f1e1e1, #aea4bf);
+            background: radial-gradient(#f5cb5c, #fff, #242423);
         }
 
         .wrapper {
