30th May, 2024 Solution Added

--- a/31-05-2024/index.html
+++ b/31-05-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#BBB700, #fff, #60935d);
+            background: radial-gradient(#C33192, #fff, #6C00BA);
         }
 
         body,
