3rd June, 2024 Solution Added

--- a/03-06-2024/index.html
+++ b/03-06-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#881600, #cbff8c);
+            background: radial-gradient(#d62828, #fff, #fcbf49);
         }
 
         body,
