--- a/08-06-2024/index.html
+++ b/08-06-2024/index.html
@@ -31,7 +31,9 @@
             background: #FFB1C2;
 
             * {
-                animation: anime1 4s linear infinite
+                animation-duration: 3s;
+                animation-direction: alternate;
+                animation-iteration-count: infinite;
             }
         }
 
@@ -40,6 +42,7 @@
             height: 100px;
             width: 100px;
             border: 10px solid #AD005A;
+            animation-name: anime2;
         }
 
         .ellipse {
@@ -47,11 +50,35 @@
             height: 70px;
             width: 40px;
             border-radius: 50%;
+            animation-name: anime1;
         }
 
         .circle1,
         .circle3 {
-            rotate: 90deg
+            rotate: 90deg;            
+        }
+
+        .circle1 {
+            margin-right: -10px;
+        }
+
+        .circle3 {
+            margin-left: -10px;
+        }
+
+        @keyframes anime1 {
+            0%, 50%{
+                rotate: 360deg;
+            }
+            50%, 75%{
+                box-shadow: 0 0 5px 5px #AD005A;
+            }
+        }
+
+        @keyframes anime2 {
+            0%, 50%{
+                transform: scaleX(-1);
+            }
         }
     </style>
 </head>
