11th June, 2024 Solution Added

--- a/10-06-2024/index.html
+++ b/10-06-2024/index.html
@@ -25,6 +25,7 @@
             width: 400px;
             background: #332c23;
             position: relative;
+            overflow: hidden;
 
             * {
                 animation-duration: 3s;
