23rd June, 2024 Solution Added

--- a/23-06-2024/index.html
+++ b/23-06-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#f43e6e, #fff);
+            background: radial-gradient(#E3747A, #fff, #002F43);
         }
 
         body,
