26th June, 2024 Solution Added

--- a/25-06-2024/index.html
+++ b/25-06-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#1B1E6A, #fff);
+            background: radial-gradient(#E3747A, #fff);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -36,13 +36,13 @@
             height: 35px;
             width: 260px;
             color: #002F43;
-            background: #002F43; 
+            background: #002F43;
             right: 0;
             animation: anime1 2s alternate infinite;
         }
 
         .box1 {
-            background: #fff; 
+            background: #fff;
             box-shadow: -300px 185px, -313px 354px 0 -4px, -40px 354px 0 -4px;
         }
 
