1st July, 2024 Solution Added

--- a/01-07-2024/index.html
+++ b/01-07-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#222328, #fff, #3D63C7);
+            background: radial-gradient(#EFBE65, #3D63C7);
         }
 
         body,
