1st July, 2024 Solution Added

--- a/01-07-2024/index.html
+++ b/01-07-2024/index.html
@@ -15,13 +15,8 @@
         body {
             min-height: 100vh;
             background: radial-gradient(#EFBE65, #3D63C7);
-        }
-
-        body,
-        .wrapper {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            display: grid;
+            place-items: center;
         }
 
         .wrapper {
