9th July, 2024 Solution Added

--- a/09-07-2024/index.html
+++ b/09-07-2024/index.html
@@ -27,6 +27,7 @@
             height: 400px;
             width: 400px;
             background: #fff;
+            position: relative;
 
             * {
                 position: absolute;
