24th July, 2024 Solution Added

--- a/24-07-2024/index.html
+++ b/24-07-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#8988A0, #FEFEFF, #101341);
+            background: radial-gradient(#7F8C8D, #fff, #20EF83);
         }
 
         body,
