24th July, 2024 Solution Added

--- a/24-07-2024/index.html
+++ b/24-07-2024/index.html
@@ -28,6 +28,8 @@
             height: 400px;
             width: 400px;
             background: #07080B;
+            overflow: hidden;
+            position: relative;
         }
 
         .circle {
