4th August, 2024 Solution Added

--- a/04-08-2024/index.html
+++ b/04-08-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#fff, #FCFE53);
+            background: radial-gradient(#fff, #D8327D);
             user-select: none;
         }
 
