12th August, 2024 Solution Added

--- a/12-08-2024/index.html
+++ b/12-08-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#07080B, #fff, #30CA9E);
+            background: radial-gradient(#07080B, #fff, #E31236);
             user-select: none;
         }
 
@@ -61,19 +61,27 @@
         }
 
         @keyframes anime1 {
-            0%, 30% {
+
+            0%,
+            30% {
                 rotate: 360deg;
             }
-            30%, 100% {
+
+            30%,
+            100% {
                 rotate: 0deg
             }
         }
 
         @keyframes anime2 {
-            0%, 60% {
+
+            0%,
+            60% {
                 rotate: 360deg;
             }
-            60%, 100% {
+
+            60%,
+            100% {
                 rotate: 0deg
             }
         }
