21st August, 2024 Solution Added

--- a/21-08-2024/index.html
+++ b/21-08-2024/index.html
@@ -47,7 +47,7 @@
         }
 
         .triangle {
-            position: fixed;
+            position: absolute;
             height: 160px;
             width: 115px;
             background: #136AAD;
