25th August, 2024 Solution Added

--- a/25-08-2024/index.html
+++ b/25-08-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#fff, #0E67AE);
+            background: radial-gradient(#fff, #B49FFC);
             user-select: none;
         }
 
