20th October, 2024 Solution Added

--- a/20-10-2024/index.html
+++ b/20-10-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#f5814e, #2a344f);
+            background: radial-gradient(#f5814e, #2a344f, #dc1363, #fff);
             user-select: none;
             display: grid;
             place-items: center;
