30th October, 2024 Solution Added

--- a/30-10-2024/index.html
+++ b/30-10-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#fe4a49, #00a6b2, #feebd3);
+            background: radial-gradient(#ffa09a, #00a6b2, #feebd3, #fe4a49);
             user-select: none;
             display: grid;
             place-items: center;
