--- a/09-11-2024/index.html
+++ b/09-11-2024/index.html
@@ -31,7 +31,7 @@
         }
 
         .circle {
-            position: fixed;
+            position: absolute;
             height: 130px;
             width: 130px;
             background: #1b1b1b;
