21st November, 2024 Solution Added

--- a/21-11-2024/index.html
+++ b/21-11-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#1b1b1b, #dcd8c6);
+            background: radial-gradient(#1b1b1b, #ff2401, #dcd8c6);
             user-select: none;
             justify-content: center;
             align-items: center;
