28th November, 2024 Solution Added

--- a/28-11-2024/index.html
+++ b/28-11-2024/index.html
@@ -39,6 +39,10 @@
             height: 320px;
             width: 320px;
             border-radius: 1in;
+            background: radial-gradient(1q, #f7e4ed 110px, #feae60);
+        }
+
+        .square:hover {
             animation: anime 2s alternate infinite;
         }
 
@@ -47,14 +51,20 @@
             height: 180px;
             width: 180px;
             border-radius: 50%;
-            animation: anime1 2s alternate infinite
+        }
+
+        .circle1:hover {
+            animation: anime1 2s alternate infinite;
         }
 
         .circle2 {
             background: #f7e4ed;
             height: 100px;
             width: 100px;
-            animation: anime2 2s alternate infinite
+        }
+
+        .circle2:hover {
+            animation: anime2 2s alternate infinite;
         }
 
         @keyframes anime {
