--- a/03-12-2024/index.html
+++ b/03-12-2024/index.html
@@ -19,8 +19,7 @@
         }
 
         body,
-        .wrapper,
-        .candy-wrapper {
+        .wrapper {
             display: flex;
             justify-content: center;
             align-items: center;
