6th December, 2024 Solution Added

--- a/04-12-2024/index.html
+++ b/04-12-2024/index.html
@@ -19,7 +19,8 @@
         }
 
         body,
-        .wrapper {
+        .wrapper,
+        .box {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -48,8 +49,6 @@
             width: 250px;
             background: #f23d0c;
             position: relative;
-            display: grid;
-            place-items: center;
             animation: anime1 1s linear infinite
         }
 
