10th December, 2024 Solution Added

--- a/10-12-2024/index.html
+++ b/10-12-2024/index.html
@@ -14,7 +14,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#0a0e2d, #fff, #eaa747);
+            background: radial-gradient(#0a0e2d, #f23d0c, #fff, #eaa747);
             user-select: none;
         }
 
