19th December, 2024 Solution Added

--- a/19-12-2024/index.html
+++ b/19-12-2024/index.html
@@ -33,7 +33,7 @@
         }
 
         .triangle {
-            position: fixed;
+            position: absolute;
             height: 2px;
             background: linear-gradient(#f9d213, #f9d213) center/100% 2px no-repeat;
             border: 55px solid;
@@ -50,7 +50,6 @@
                 width: 220px;
             }
         }
-    </style>
     </style>
 </head>
 
