9th January, 2025 Solution Added

--- a/09-01-2025/index.html
+++ b/09-01-2025/index.html
@@ -24,9 +24,7 @@
         .bg-anime {
             height: 400px;
             width: 400px;
-            background: radial-gradient(1q, #40AFDB 60px,
-                    #fff 0 140px, #0000 0), linear-gradient(225deg,
-                    #11638C 50%, #FF9A8D 0);
+            background: radial-gradient(1q, #40AFDB 60px, #fff 0 140px, #0000 0), linear-gradient(225deg, #11638C 50%, #FF9A8D 0);
             animation: anime 2s alternate infinite
         }
 
