16th January, 2025 Solution Added

--- a/16-01-2025/index.html
+++ b/16-01-2025/index.html
@@ -46,7 +46,7 @@
         }
 
         .circle {
-            position: fixed;
+            position: absolute;
             border-radius: 50%;
             height: 110px;
             width: 110px;
