27th January, 2025 Solution Added

--- a/27-01-2025/UIChallenge.html
+++ b/27-01-2025/UIChallenge.html
@@ -59,20 +59,20 @@
         header::before {
             position: absolute;
             content: '';
-            height: 45px;
+            height: 34px;
             width: 40px;
             background: #009bba;
             border-radius: 10px 0 0 0;
-            rotate: 37deg;
-            left: 120px;
-            top: 3px;
+            transform: skewX(-40deg);
+            left: 116px;
+            top: -4px;
             box-shadow: -20px 0#1b233d, -40px 3px#1b233d;
         }
 
         h1 {
             color: #fff;
             font-size: 1.25rem;
-            width: 80px;
+            width: 70px;
             height: 30px;
             background: #1b233d;
             padding: 5px 10px;
