27th January, 2025 Solution Added

--- a/27-01-2025/UIChallenge.html
+++ b/27-01-2025/UIChallenge.html
@@ -72,6 +72,7 @@
         h1 {
             color: #fff;
             font-size: 1.25rem;
+            font-weight: 400;
             width: 70px;
             height: 30px;
             background: #1b233d;
@@ -81,7 +82,8 @@
         }
 
         h2 {
-            color: #fff
+            color: #fff;
+            font-size: 1.25rem
         }
 
         ul {
