--- a/07-02-2025/UIChallenge.html
+++ b/07-02-2025/UIChallenge.html
@@ -30,7 +30,7 @@
             height: 400px;
             width: 400px;
             background: radial-gradient(1q at 60% 50%,
-                    #fab5704c, #212121 60px);
+                    rgb(255, 0, 149) 10px, #212121 60px);
         }
 
         .card {
@@ -39,7 +39,7 @@
             border-radius: 10px;
             color: #fff;
             background: #ffffff13;
-            opacity: .9;
+            backdrop-filter: blur(10px);
             display: flex;
             flex-direction: column;
             gap: 4rem;
