8th February, 2025 Solution Added

--- a/08-02-2025/UIChallenge.html
+++ b/08-02-2025/UIChallenge.html
@@ -17,6 +17,7 @@
         body {
             min-height: 100vh;
             user-select: none;
+            background: radial-gradient(#242832, #fff, #5353ff);
         }
 
         body,
@@ -29,7 +30,7 @@
         .wrapper {
             height: 400px;
             width: 400px;
-            background: #212121;
+            background: linear-gradient(45deg, #7e8590, #5353ff);
         }
 
         ul {
