--- a/26-02-2025/UIChallenge.html
+++ b/26-02-2025/UIChallenge.html
@@ -85,7 +85,7 @@
             box-shadow: 5px 5px var(--shadowColor);
             background: #fff;
             font-size: 1rem;
-            font-weight: bold
+            font-weight: bold;
         }
 
         button:nth-child(2) {
@@ -96,7 +96,7 @@
         button:hover {
             transform: translate(-2px, -2px);
             box-shadow: 7px 7px var(--shadowColor);
-            transition: all .5s
+            transition: all .5s;
         }
 
         button:nth-child(1):hover {
