27th February, 2025 Solution Added

--- a/26-02-2025/UIChallenge.html
+++ b/26-02-2025/UIChallenge.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Play CSS Daily Target Solution - February 26, 2025</title>
+    <title>Warning Popup - Play CSS Daily Target Solution - February 26, 2025</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet" />
     <style>
