28th February, 2025 Solution Added

--- a/28-02-2025/UIChallenge.html
+++ b/28-02-2025/UIChallenge.html
@@ -16,7 +16,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#03a9f4, #fcebeb);
+            background: radial-gradient(#fff, #ff4655, #7D8082);
             user-select: none;
         }
 
