March 4, 2025 Solution Added

--- a/03-03-2025/UIChallenge.html
+++ b/03-03-2025/UIChallenge.html
@@ -22,8 +22,7 @@
         }
 
         body,
-        .wrapper,
-        .card {
+        .wrapper {
             display: flex;
             justify-content: center;
             align-items: center;
