March 8, 2025 Solution Added

--- a/08-03-2025/UIChallenge.html
+++ b/08-03-2025/UIChallenge.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Switch Button - Play CSS Daily Target Solution - March 8, 2025</title>
+    <title>Switch (ON/OFF) Button - Play CSS Daily Target Solution - March 8, 2025</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style>
         * {
             margin: 0;
             padding: 0;
+            font-family: 'Roboto', sans-serif;
         }
 
         body {
@@ -63,19 +64,20 @@
         .slider::before {
             position: absolute;
             content: "";
-            height: 2.4em;
-            width: 2.4em;
+            height: 2.5em;
+            width: 2.5em;
             border-radius: 2in;
             background: #FFFFFF;
             transition: .4s;
             bottom: .3em;
-            left: .3em
+            left: .25em
         }
 
         section {
             color: #4d4d4d;
             font-size: 3rem;
             font-weight: bold;
+            line-height: 1.25;
         }
     </style>
 </head>
@@ -88,7 +90,7 @@
         </label>
         <section>
             <div>N</div>
-            <div>F</div>
+            <div>FF</div>
         </section>
     </div>
 </body>
