March 9, 2025 Solution Added

--- a/09-03-2025/UIChallenge.html
+++ b/09-03-2025/UIChallenge.html
@@ -15,7 +15,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#21cc4c, #b6b6b6);
+            background: radial-gradient(#E2E2E2, #FEBF00);
             user-select: none;
         }
 
