March 16, 2025 Solution Added

--- a/16-03-2025/UIChallenge.html
+++ b/16-03-2025/UIChallenge.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-        Bar Loader - PlayCSS Daily Target Solution, March 16, 2025
+        Battery Charging Animation - PlayCSS Daily Target Solution, March 16, 2025
     </title>
     <style>
         * {
