March 20, 2025 Solution Added

--- a/20-03-2025/UIChallenge.html
+++ b/20-03-2025/UIChallenge.html
@@ -53,7 +53,7 @@
             position: absolute;
         }
 
-        span.tooltip {
+        .tooltip {
             opacity: 0;
             scale: .85;
             transition: all .5s
