March 30, 2025 Solution Added

--- a/30-03-2025/UIChallenge.html
+++ b/30-03-2025/UIChallenge.html
@@ -41,12 +41,15 @@
             flex-direction: column
         }
 
-        header div {
+        header {
+            padding: 6px;
+        }
+
+        header img {
             background: #2563EB;
             height: 150px;
+            width: 100%;
             border-radius: .5rem;
-            margin: 2px;
-            box-sizing: border-box;
         }
 
         section {
@@ -98,7 +101,8 @@
     <div class="wrapper">
         <main class="card">
             <header>
-                <div></div>
+                <img
+                    src="https://images.unsplash.com/photo-1432821596592-e2c18b78144f?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"></img>
             </header>
             <section>
                 <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
