April 2, 2025 Solution Added

--- a/02-04-2025/UIChallenge.html
+++ b/02-04-2025/UIChallenge.html
@@ -42,7 +42,8 @@
             font-weight: bold;
             color: #fff;
             background: #675C9C;
-            overflow: hidden
+            overflow: hidden;
+            border: none;
         }
 
         button::before,
@@ -62,11 +63,11 @@
         }
 
         button::before {
-            margin-left: -140px
+            margin-left: -138px
         }
 
         button::after {
-            margin-left: 140px
+            margin-left: 138px
         }
     </style>
 </head>
