April 3, 2025 Solution Added

--- a/03-04-2025/UIChallenge.html
+++ b/03-04-2025/UIChallenge.html
@@ -43,6 +43,7 @@
             border-radius: 0.5rem;
             border: 2px dashed #ccc;
             gap: 1rem;
+            min-width: 13rem
         }
 
         h1 {
@@ -89,6 +90,10 @@
         tbody tr td:nth-child(3) {
             margin-left: 1rem;
         }
+
+        .greeting-msg {
+            font-size: .75rem
+        }
     </style>
 </head>
 
@@ -132,7 +137,7 @@
                 <span>Total:</span>
                 <span>$45.00</span>
             </p>
-            <p>Thank you for shopping with us!</p>
+            <p class="greeting-msg">Thank you for shopping with us!</p>
         </div>
     </div>
 </body>
