April 7, 2025 Solution Added

--- a/07-04-2025/UIChallenge.html
+++ b/07-04-2025/UIChallenge.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>
-        Feedback popup with rating - Play CSS Daily Target Solution - April 7,
-        2025
+        Feedback with Rating UI - Play CSS Daily Target Solution - April 7, 2025
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet" />
