April 8, 2025 Solution Added

--- a/08-04-2025/UIChallenge.html
+++ b/08-04-2025/UIChallenge.html
@@ -18,7 +18,7 @@
 
         body {
             min-height: 100vh;
-            background: radial-gradient(#252d37, #fff, #fb7413);
+            background: radial-gradient(#fb8500, #fff, #023047);
             user-select: none;
         }
 
