April 24, 2025 Solution Added

--- a/23-04-2025/UIChallenge.html
+++ b/23-04-2025/UIChallenge.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>
-        Button Animation - Play CSS Daily Target Solution - April 23, 2025
+        Button Text Transform Animation - Play CSS Daily Target Solution - April 23, 2025
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet" />
